--- a/Manager/src/info.ini
+++ b/Manager/src/info.ini
@@ -1,6 +1,6 @@
 name=tincui
-title=tinc用户级别内网节点管理
-intro=管理用户级别内网节点
+title=Tinc集群管理
+intro=管理Tinc集群
 author=kevin
 website=http://www.fastadmin.net
 version=0.0
